# maestra-core

./: .dockerignore  .env.example  .env.test.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  DOCKER.md  DOCUMENTATION_AUDIT.txt  LICENSE  Makefile  QUICKSTART.md  README.md  TODOS.md  VERSION  docker-compose.desktop.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  maestra-routing-handoff.md  maestra-routing.jsx
.claude/: launch.json  settings.local.json
.github/workflows/: deploy-docs.yml  deploy-test.yml  publish-arduino.yml  publish-docker-images.yml  publish-js.yml  publish-python.yml  publish-touchdesigner.yml  publish-unity.yml  publish-unreal.yml  release-desktop.yml  release-sdk.yml
config/dmx/: patch.example.yaml  patch.yaml
config/mosquitto/: mosquitto.conf
config/nodered/: settings.js
config/osc-gateway/: mappings.json.example
desktop/: index.html  package-lock.json  package.json  tailwind.config.js
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/: compose.yml
desktop/src-tauri/src/: bootstrap.rs  docker.rs  env_editor.rs  health.rs  lib.rs  main.rs  paths.rs  setup.rs
docs/: mkdocs.yml
docs/docs/: index.md
docs/plans/: dmx-groups-layer-system-plan.md  maestra-dmx-gateway-plan.md  ofl-git-sync-integration-plan.md
examples/: potentiometer.py  potentiometer_4x.py  potentiometer_4x.service
examples/potentiometer/: potentiometer.ino
examples/rtl-sdr/: README.md  requirements.txt  rtl_sdr_maestra.py
examples/waveshare-esp32-dashboard/: CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.old  waveshare_dashboard.ino
flows/: flows.json
scripts/: Dockerfile.sync  bootstrap_venue.py  bump-sdk-version.sh  migrate.sh  package.json  sync-ofl.js
sdks/js/: README.md  package.json
sdks/maxmsp/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/maestra/: __init__.py  client.py  discovery.py  entity.py  show.py  stream.py  types.py
sdks/touchdesigner/: MaestraDiscovery.py  MaestraExt.py  README.md  build_maestra_tox.py
sdks/unity/: README.md  package.json
services/dashboard/: .gitkeep  Dockerfile  README.md  next.config.js  package.json  (+3 more)
(+325 files in other folders)
