[package]
name = "maestra-desktop"
version = "0.1.0"
description = "Maestra Desktop — one-click launcher for the Maestra creative platform"
authors = ["Jordan Snyder"]
edition = "2021"

[lib]
name = "maestra_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-dialog = "2.6.0"
include_dir = "0.7.4"
dirs = "5"
